use wmllint for spellchecking in utils

--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -1,4 +1,4 @@
-#textdoman wesnoth-ala
+#textdomain wesnoth-ala
 
 #define MAIN_HEROES_DEATHS
     [event]
@@ -38,7 +38,7 @@
         [/filter]
         [message]
             speaker=Glubtrub
-            message= _ "Aiah! To do bad!"
+            message= _ "Aiah! To do bad!" # wmllint: no spellcheck
         [/message]
         {INCIDENTAL_MUSIC defeat.ogg}
         [endlevel]
