--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -13,6 +13,7 @@
 
 #define 01_INTRODUCTION_DIALOGUE
     [message]
+        # wmllint: local spellings Titus
         speaker=Titus
         message= _ "Commander, look at the hills in the north, during last night a group of orcs camped over the river!"
     [/message]
@@ -92,7 +93,7 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "Incredibie! Anyway, I don't think I'm wrong by putting me on your orders, commander...?"
+        message= _ "Incredible! Anyway, I don't think I'm wrong by putting me on your orders, commander...?"
     [/message]
     [message]
         speaker=Glauco
@@ -120,6 +121,7 @@
     {MOVE_UNIT id=Geobard 9 4}
     [message]
         speaker=Geobard
+        # wmllint: directory spellings Wesnothian
         message= _ "There's no one here? I'm a representative of the Wesnothian Army!"
     [/message]
 #enddef
@@ -139,7 +141,7 @@
 #define 02A_RANFY_INTRODUCTION
     [message]
         speaker=Ranfy
-        message=_ "Kreeeeee!"
+        message=_ "Kreeeeee!" # wmllint: no spellcheck
     [/message]
     [message]
         speaker=Glauco
@@ -171,7 +173,7 @@
     [/sound]
     [message]
         speaker=Ranfy
-        message=_ "Kraaaaaa... Kruu Kruu... Fiiii"
+        message=_ "Kraaaaaa... Kruu Kruu... Fiiii" # wmllint: no spellcheck
     [/message]
     [message]
         speaker=Divaid
@@ -229,7 +231,7 @@
     [/message]
     [message]
         speaker=Olly
-        message= _ "Gulp ... We'll do it immediately, chief, the time to gather the boys!"
+        message= _ "Gulp... We'll do it immediately, chief, the time to gather the boys!"
     [/message]
 #enddef
 
@@ -263,7 +265,7 @@
 #define 02B_FANGY_INTRODUCTION
     [message]
         speaker=Fangy
-        message=_ "GRRRRRR !"
+        message=_ "GRRRRRR!" # wmllint: no spellcheck
     [/message]
     [message]
         speaker=Glauco
@@ -275,6 +277,8 @@
     [/message]
     [message]
         speaker=Glauco
+        # wmllint: local spellings beas
+        #po: Glauco is about to say "beast" but catches himself before he can finish the word:
         message= _ "Every help will be well accepted, both yours and that of the beas... that of the beautiful lady."
     [/message]
     [message]
@@ -287,7 +291,7 @@
     [/sound]
     [message]
         speaker=Fangy
-        message=_ "Grauur ... Grr ... wuuf"
+        message=_ "Grauur... Grr... woof!" # wmllint: no spellcheck
     [/message]
     [message]
         speaker=Croquet
@@ -325,14 +329,15 @@
     [/message]
     [message]
         speaker=Kssihiss
-        message= _ "Humansss? After all thisss time they wantsss to reconquessst this place? They'll find only the death!"
+        message= _ "Humansss? After all thisss time they wantsss to reconquessst this place? They'll find only their deathsss!" # wmllint: no spellcheck
     [/message]
 #enddef
 
 #define 03_AGREEMENT_WITH_GLUBTRUB
     [message]
         speaker=Kssihiss
-        message= _ "Ssstupid lard mammal, ssstay out of thisss ssstory or you won't be able to get out!"
+        # probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier:
+        message= _ "Ssstupid lard mammal, ssstay out of thisss ssstory or you won't be able to get out!" #wmllint: no spellcheck
     [/message]
     [message]
         speaker=Glauco
@@ -367,11 +372,11 @@
 #define 03_FINAL_DIALOGUE
     [message]
         speaker=Glauco
-        message= _ "The station is free, and the river too! Good work my soldiers!"
+        message= _ "The station is free, and the river, too! Good work, my soldiers!"
     [/message]
     [message]
         speaker=Glubtrub
-        message= _ "Nice! snakes make flat like sole into the river, flat flat! You like me, man of Wetspot! I to come with you, and togheter to come to squash world!"
+        message= _ "Nice! Snakes make flat like sole into the river, flat-flat! You like me, man of Wetspot! I to come with you, and together to come to squash world!"
     [/message]
     [message]
         speaker=Glauco
@@ -399,7 +404,7 @@
     {SCOUT_MESSAGE ( _ "Well, gentlemen, since you don't want to spend a few weeks climbing the mountains further south, and I think it's a good idea since the wilds become even more wild in those mountains, we have just to find a road that leads us on the other side of this territorry, through the bloody hills.")}
     [message]
         speaker=Glauco
-        message= _ "What's the problem? The season is good, the weather is beautiful, these hills were safe when the amber caravans passed throught them!"
+        message= _ "What's the problem? The season is good, the weather is beautiful, these hills were safe when the amber caravans passed through them!"
     [/message]
     {SCOUT_MESSAGE ( _ "Too bad that those times are over before you were born, commander! In the past the road was quiet because the few remaining dwarves lived in the mines that they exploited for centuries; these mines have been exhausted for a while, but some dwarfs still extracted something that allowed them to trade with the caravan workers; when the caravans ceased, the dwarves raised their heels and left!")}
     [message]
@@ -478,6 +483,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        # wmllint: local spellings Bleah
         message= _ "No to have fear, but bats to have ugly taste! Bleah!"
     [/message]
 #enddef
@@ -499,6 +505,7 @@
 
 #define 05_INTRODUCTION_DIALOGUE
     [message]
+        # wmllint: directory spellings Joralda
         speaker=Joralda
         message= _ "Welcome, foreigners! It was a long time since we couldn't see the colors of Wesnoth around here! Joralda is curious to find out why I come back to see them right now."
     [/message]
@@ -552,7 +559,7 @@
     [/message]
     [message]
         speaker=Giksy
-        message= _ "Fisssh and mammalsss together, for take our treasssure, I bet! The only metal that they will have will be the iron of our ssspearsss!"
+        message= _ "Fisssh and mammalsss together, to take our treasssure, I bet! The only metal that they will have will be the iron of our ssspearsss!" # wmllint: no spellcheck
     [/message]
 #enddef
 
@@ -603,7 +610,7 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "One moment, I know those blue and yellow banners! That's the Gan-Tarkas tribe! In Weldyn that name is well known! He'is one of the most powerful and authoritative warlords, and although he's officially part of the Northern Alliance, he has never given up to claim these border lands, including those we have crossed to reach the Nereids. If he has come here he must have a specific purpose, and I exclude that it's to make a holiday."
+        message= _ "One moment, I know those blue and yellow banners! That's the Gan-Tarkas tribe! In Weldyn that name is well known! He is one of the most powerful and authoritative warlords, and although he's officially part of the Northern Alliance, he has never given up to claim these border lands, including those we have crossed to reach the Nereids. If he has come here he must have a specific purpose, and I exclude that it's to make a holiday."
     [/message]
     [message]
         speaker=Glauco
@@ -641,14 +648,23 @@
     [/message]
     [message]
         speaker=Gan-Tarkas
-        message= _ "Of course he did it. Ah! Ah! Ah! I ordered him to do it! And now you should open very well your ears, homunculus, because my words could be the last you hear in your life!
-I'm not interested in Amoran, I'm interested in the whole eastern territory, from here to the coast! But I can't take it until Wesnoth thinks that there's something worth to be protected here; so I said to Grunto to destroy Amoran, then I would have arrived, slowly, and I would have settled here saying that there was no Wesnoth's banner here anyway."
+        message= _ "Of course he did it. Ah! Ah! Ah! I ordered him to do it! And now you should open very well your ears, homunculus, because my words could be the last you hear in your life!"
     [/message]
     [message]
         speaker=Gan-Tarkas
-        message= _ "But you put me the sticks between the wheels twice, first when you defeated Grunto and his human allied Dadoc, and then you started to go towards east.
-I immediately understood that you were going there for the amber, and for this I waited you here; I'm sorry, but you and all your friends will have to die, here and today, and Wesnoth will never know anything about the amber and the possibility to resume its trade!
-I know well they will be angry for the destruction of Amoran, but I'll retire immediately, I will act of contrition, I will say that I wanted to avenge Grunto and I'll indemnify Wesnoth with a little of gold. But in the meantime there will be nothing here, in the west, that Wesnoth may be interested to defend; and with the time I'll return, stealthily, to take all these territories, and mine will become the most powerful tribe of orcs on the whole continent."
+        message= _ "I'm not interested in Amoran, I'm interested in the whole eastern territory, from here to the coast! But I can't take it until Wesnoth thinks that there's something worth to be protected here; so I said to Grunto to destroy Amoran, then I would have arrived, slowly, and I would have settled here saying that there was no Wesnoth's banner here anyway."
+    [/message]
+    [message]
+        speaker=Gan-Tarkas
+        message= _ "But you put me the sticks between the wheels twice, first when you defeated Grunto and his human allied Dadoc, and then you started to go towards east."
+    [/message]
+    [message]
+        speaker=Gan-Tarkas
+        message= _ "I immediately understood that you were going there for the amber, and for this I waited you here; I'm sorry, but you and all your friends will have to die, here and today, and Wesnoth will never know anything about the amber and the possibility to resume its trade!"
+    [/message]
+    [message]
+        speaker=Gan-Tarkas
+        message= _ "I know well they will be angry for the destruction of Amoran, but I'll retire immediately, I will act of contrition, I will say that I wanted to avenge Grunto and I'll indemnify Wesnoth with a little of gold. But in the meantime there will be nothing here, in the west, that Wesnoth may be interested to defend; and with the time I'll return, stealthily, to take all these territories, and mine will become the most powerful tribe of orcs on the whole continent."
     [/message]
     [message]
         speaker=Glauco
@@ -680,7 +696,9 @@ I know well they will be angry for the destruction of Amoran, but I'll retire im
     [/message]
     [message]
         speaker=Glubtrub
-        message= _ "Yes ... big nice ... Glubtrub great accounter of squash!"
+        # wmllint: local spellings accounter
+        #po: Glubtrub is an ogre so he can make up words like that; an "accounter" is one who "accounts"
+        message= _ "Yes... big nice... Glubtrub great accounter of squash!"
     [/message]
 #enddef
 
@@ -698,7 +716,7 @@ I know well they will be angry for the destruction of Amoran, but I'll retire im
 #define 06_NAGAS_ARRIVAL
     [message]
         speaker=Hisskss
-        message= _ "Here I am, Gan-Tarkass, I came to help you, asss I promisssed, to avenge my brother Ksshiss, killed by thisss mammalsss! And I alssso put my gold at your disposssal!"
+        message= _ "Here I am, Gan-Tarkass, I came to help you, asss I promisssed, to avenge my brother Ksshiss, killed by thisss mammalsss! And I alssso put my gold at your disposssal!" # wmllint: no spellcheck
     [/message]
     [message]
         speaker=Gan-Tarkas
