--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -1,6 +1,8 @@
 #textdomain wesnoth-ala
 
 #define SCENARIO_01_STORY_01
+    # wmllint: general spellings Wesnoth Li'sar Irdya Elensefar Weldyn
+    # wmllint: directory spellings Abelardo Gozman Guberto Piegafetta
     story=_ "Few, even among the greatest dignitaries of the realm, know that Wesnoth's eastern borders extend far beyond the Eastmark Hills!
 All began when the Queen Li'sar, newly established on the throne, organized a series of expeditions that circumnavigated the continent of Irdya to determine his extension and establish the conformation of his coasts; one of these expeditions, commanded by the Admiral Abelardo Gozman, left Elensefar in the spring of 520 YW, heading north; after a journey of almost 2 years, almost all of them spent to make surveys and research in the cold seas of the north, Gozman reached the eastern coasts of the continent, and then a small bay, at the mouth of a river, inhabited by a little community of nereids.
 The calculations made by Gozman made him suspect that the Bitter Swamp, that at the time represented the eastern limit of the human knowledge of the continent of Irdya, had to be, more or less, halfway between the eastern and the western coasts of the same continent; then he chose a small group of men who, under the command of Captain Guberto Piegafetta and with the help of the Nereids, ascended the river to establish how far it was, to the west, its source. Gozman, for his part, considering the situation of the ships at his disposal too compromised to face who knows what situations continuing the journey to the south, resumed the road north, to return to Elensefar retracing the same route made the first leg, a route already known and so, in some sense, safer!
@@ -10,8 +12,10 @@ Piegafetta took with him two things that became of great importance for the wild
 #enddef
 
 #define SCENARIO_01_STORY_02
+    # wmllint: directory spellings Amoran
+    # wmllint: general spellings Wesnothians Soradoc Lintanir
     story=_ "While the lack of a sovereignty over the wild lands immediately interested the reigning house of Wesnoth, the amber immediately interested the merchants of Soradoc; they established an outpost where the Amber River ceased to be navigable, and from the outpost began to send boats to the Nereids Bay; the outpost soon became a prosperous town that was named Amoran.
-Problems started soon with the amber trade; the orcs that lived between the Amber River and the forest of Lintanir didn't look favorably at all the traffic of Wesnothians boats along the river, and acted like the orcs are used to act in these cases; there were several victims on both sides, guerriculars, raids, punitive expeditions and reprisals; in the end, when the revenues of amber traffic along the river had become insufficient to support the military expenses necessary to keep it alive, a compromise was reached with the orcs;
+Problems started soon with the amber trade; the orcs that lived between the Amber River and the forest of Lintanir didn't look favorably at all the traffic of Wesnothians boats along the river, and acted like the orcs are used to act in these cases; there were several victims on both sides, guerrilla raids, punitive expeditions and reprisals; in the end, when the revenues of amber traffic along the river had become insufficient to support the military expenses necessary to keep it alive, a compromise was reached with the orcs;
 The orcs recognized the sovereignty of Wesnoth on the wilds between the Bitter Swamp and the eastern coasts of the continent, south of the Amber River, but Wesnoth had to guarantee the neutrality of the river, and both parties pledged to ban boats on the river of any kind and for any purpose; in 536 YW the same treaties were recognized as valid also by the newborn Northern Alliance.
 Then a caravan route was established, a path which followed, more or less, the course of the Amber River through the Wild Lands, and the amber returned to arrive to Amoran, and from here into the whole kingdom of Wesnoth; Amoran experienced a long period of prosperity, becoming a town so important as to deserve the title of Capital of the wilds, until ... fashion changed!"
 #enddef
@@ -20,7 +24,7 @@ Then a caravan route was established, a path which followed, more or less, the c
     story=_ "Wesnoth's nobles and rich grew tired of amber, and for their own delight, the vanity of their kind consorts, and the pleasure of their keen lovers, they began to prefer the multi-colored precious stones that the dwarves pulled out of their mountains, and that more easily and with minor vicissitudes of the amber coming into their hands.
 With the decline, and finally the cessation, of the traffic of the amber, Amoran also declined, slowly and dignifiedly as an old lady; the population gradually decreased; the trades ended; the stone walls became too expensive to maintain, and where they collapsed they were replaced by wooden palisades; the garrison, once numerous, was reduced to a handful of soldiers, carefully chosen among those who, for lack of money and of rank, fewer means had to oppose to the assignment of such a disagreeable destination; the cultivated fields became the only source of wealth of the inhabitants, and thinning out the coins in circulation, also the merchants thinned out.
 The only element of the anthropological landscape not to suffer a dramatic decline were the brigands, who became, however, more desperate, and therefore more ferocious than before!
-Amoran retained the title of capital, but was effectively subjected to the authority of the more important city of Soradoc; but Soradoc was far away, and Amoran was beyond the swamp, beyond the hills, beyond, above all, the interest of the Soradoc's autorities; so imagine how distant Amoran became from the interest of those who governed Weldyn.
+Amoran retained the title of capital, but was effectively subjected to the authority of the more important city of Soradoc; but Soradoc was far away, and Amoran was beyond the swamp, beyond the hills, beyond, above all, the interest of the Soradoc's authorities; so imagine how distant Amoran became from the interest of those who governed Weldyn.
 The town, now reduced to a village, had become so unimportant that it wasn't affected by the great invasion of undead of 625 YW, even if in the nearby Eastmark Hills seemed to have been born; and it was a good thing, because, otherwise, in no way Amoran could survived to those calamitous events! Instead he survived and a day ... another time, the wind changed!"
 #enddef
 
@@ -30,6 +34,7 @@ He departed full of enthusiasm and arrived at destination full of ideas, all unw
 #enddef
 
 #define SCENARIO_02A_STORY_01
+    # wmllint: directory spellings Dadoc
     story=_ "Defeated Grunt the Orc, Glauco thought it was time to settle the accounts with Dadoc and his band; the arrival of Geobard with orders of Wesnoth allowed Glauco to leave peasants and woodcutters to their jobs and to enlist other soldiers, and when he felt to have enough soldiers, that is when he didn't have more money available, he set off towards the forest in which, as everyone knew, Dadoc took refuge to lick his wounds, as in this case, or to enjoy the fruits of his raids."
 #enddef
 
@@ -38,11 +43,13 @@ He departed full of enthusiasm and arrived at destination full of ideas, all unw
 #enddef
 
 #define SCENARIO_02B_STORY_01
+    # wmllint: general spellings orcish
+    # wmllint: directory spellings Grunto
     story=_ "With the Dadoc's gang out of the games, and emboldened by the victory obtained and by his new commander prerogatives, Glauco decided to face at least one of others Amoran's problems, that's to say Grunto the orc; as Grunto was not a member of the tribes associated with the northern alliance, it would be unlikely that other orcish chiefs would help him, especially now that he had already been defeated in the previous battle, and therefore he saw his reputation finish, as it's called among the orcs, in a troll latrine. However, emboldening had no meant to became stupid, for the young sergeant; a campaign in hostile territory, against forces of only partly known entity, was however risky and full of unknowns."
 #enddef
 
 #define SCENARIO_02B_STORY_02
-    story=_ "So Glauco decided to rely only on professional soldiers, who would not fall in panic in the face of the fierce appearance of the orcs; when he finally crossed the ford of Amoran, he not only had reliable troops, though not too experienced, but also the garrison coffins completely empty; like his pockets, on the other hand, since the reward on the head of Dacoc the bold young man preferred to invest in lances, war arches and armor, rather than spend that gold in ways more pleasant but, given the venture in which he had slipped, also less useful to keep the head on the neck. For the sake of prudence, what remained of the original garrison was left to Amoran, so that it would recover from the fatigue of the previous battle and watch over the town against any nasty surprises!"
+    story=_ "So Glauco decided to rely only on professional soldiers, who would not fall in panic in the face of the fierce appearance of the orcs; when he finally crossed the ford of Amoran, he not only had reliable troops, though not too experienced, but also the garrison coffins completely empty; like his pockets, on the other hand, since the reward on the head of Dadoc the bold young man preferred to invest in lances, war arches and armor, rather than spend that gold in ways more pleasant but, given the venture in which he had slipped, also less useful to keep the head on the neck. For the sake of prudence, what remained of the original garrison was left to Amoran, so that it would recover from the fatigue of the previous battle and watch over the town against any nasty surprises!"
 #enddef
 
 #define SCENARIO_02B_STORY_03
@@ -62,7 +69,7 @@ He departed full of enthusiasm and arrived at destination full of ideas, all unw
 #enddef
 
 #define SCENARIO_04_STORY_01
-    story=_ "Now only an obstacle separate the Glauco's company from the sea: a chain of low hills that the river literally grazed with its southern shore; not being able to overcome the river, and being too long to wander from the south, Glauco decided that they were going through, looking for those steps that the ancient Amber Road used to travel in the past. But in the past those hills had been inhabited, and now they were inhabitated again."
+    story=_ "Now only an obstacle separate the Glauco's company from the sea: a chain of low hills that the river literally grazed with its southern shore; not being able to overcome the river, and being too long to wander from the south, Glauco decided that they were going through, looking for those steps that the ancient Amber Road used to travel in the past. But in the past those hills had been inhabited, and now they were inhabited again."
 #enddef
 
 #define SCENARIO_05_STORY_01
@@ -78,10 +85,12 @@ He departed full of enthusiasm and arrived at destination full of ideas, all unw
 #enddef
 
 #define SCENARIO_06_STORY_03
+    # wmllint: directory spellings Glubtrub
     story=_ "Suddenly, Glauco was extremely happy that the men he had with him had accumulated a good combat experience; and he was as much happy that Glubtrub and his people, points out by the sudden curiosity to see how a human town was made, were still with him."
 #enddef
 
 #define EPILOGUE_STORY_01
+    # wmllint: directory spellings Gan-Tarkas
     story=_ "The news of the defeat of Gan-Tarkas quickly reached before Soradoc and then Weldyn; just as quickly Glauco was summoned to the capital city, where the king wanted to know, by word and by sign, because events so resounding were happening, without his knowledge, in lands that, often, even he didn't remember being subject to his crown."
 #enddef
 
@@ -104,14 +113,18 @@ And there were many things to do in Amoran, but Glauco, who was also appointed c
 #define EPILOGUE_GLUBTRUB
     [message]
         speaker=Glubtrub
-        message=_ "To Glubtrub and the tribe of the old post station were given perpetual concession to the territory in which they lived, and only the Nereids were given permission to cross that territory without the explicit consent of the Ogre; moreover, because it was known that who attacked the ogres would have to deal with the dreaded exterminator of Orcs named Glauco, the life of the tribe was, in the following years, extraordinarily peaceful, for a tribe of Ogre at least.
-Because of so much prosperity, always according to an ogre judgment, Glubtrub would have been remembered, in the small history of his tribe, as Glubtrub the Great, but the progressive expansion of his waistline finally earned him the name of the Glubtrub the Enormous."
+        message=_ "To Glubtrub and the tribe of the old post station were given perpetual concession to the territory in which they lived, and only the Nereids were given permission to cross that territory without the explicit consent of the Ogre; moreover, because it was known that who attacked the ogres would have to deal with the dreaded exterminator of Orcs named Glauco, the life of the tribe was, in the following years, extraordinarily peaceful, for a tribe of Ogre at least."
+    [/message]
+    [message]
+        speaker=Glubtrub
+        message=_ "Because of so much prosperity, always according to an ogre judgment, Glubtrub would have been remembered, in the small history of his tribe, as Glubtrub the Great, but the progressive expansion of his waistline finally earned him the name of the Glubtrub the Enormous."
     [/message]
 #enddef
 
 #define EPILOGUE_CROQUET_AND_FANGY
     [message]
         speaker=Croquet
+        # wmllint: directory spellings Fangy
         message= _ "Croquet returned to his life in the woods, along with his 'girlfriend', but returned to Amoran whenever he wanted to drink a good beer with friends and to tell some strange facts that he thought Glauco might be interested in."
     [/message]
 #enddef
@@ -133,6 +146,7 @@ Because of so much prosperity, always according to an ogre judgment, Glubtrub wo
 #define EPILOGUE_DIVAID_AND_RANFY
     [message]
         speaker=Divaid
+        # wmllint: directory spellings Divaid Ranfy
         message= _ "Divaid and Ranfy returned to their woods, mumbling that they had helped the Wesnothians to fill their house of westerners yahoo; but they didn't really have to give them those nosecrops, since when they lost something or someone, or lost themselves in those unknown territories, Ranfy was always ready to hover in the sky and put his very sharp sight at disposal to find what o who had been missing."
     [/message]
 #enddef
@@ -161,7 +175,10 @@ Because of so much prosperity, always according to an ogre judgment, Glubtrub wo
 #define EPILOGUE_GLAUCO
     [message]
         speaker=Glauco
-        message=_ "Glauco and his friends had other adventures later, as was inevitable for those who were called to manage a territory so vast in which they still lived many strange, wonderful and horrible creatures.
-Glauco did not mind at all, in his serene old age, to tell his adventures to anyone asked him, sons, nephew or great-grandchildren that they were; but to those who asked him how he managed to become an important man, he always began by saying - Oh, that time was just a little adventure -"
+        message=_ "Glauco and his friends had other adventures later, as was inevitable for those who were called to manage a territory so vast in which they still lived many strange, wonderful and horrible creatures."
+    [/message]
+    [message]
+        speaker=Glauco
+        message=_ "Glauco did not mind at all, in his serene old age, to tell his adventures to anyone asked him, sons, nephew or great-grandchildren that they were; but to those who asked him how he managed to become an important man, he always began by saying - Oh, that time was just a little adventure -"
     [/message]
 #enddef
