more spellchecking with wmllint

--- a/_main.cfg
+++ b/_main.cfg
@@ -36,7 +36,8 @@
         description= _"Difficult"
     [/difficulty]
 
-    description= _ "A young Wesnoth army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly it will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
+    # wmllint: general spellings Wesnothian
+    description= _ "A young Wesnothian army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly it will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
 	
 (Novice Level, 6 scenarios + 1 epilogue)"
 
