--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -1,6 +1,7 @@
 #textdomain wesnoth-ala
 
 [scenario]
+    # wmllint: directory spellings Amoran
     id=01_The_Attack_to_Amoran
     name= _ "The Attack to Amoran"
     map_data="{~add-ons/A_Little_Adventure/maps/01_The_Attack_To_Amoran.map}"
@@ -35,6 +36,7 @@
     [side]
         side=1
         controller=human
+        # wmllint: directory spellings Wesnothians
         team_name=Wesnothians
         user_team_name=_ "Wesnothians"
         recruit=Peasant,Woodsman
@@ -296,6 +298,7 @@
         [/message]
         [message]
             speaker=Glauco
+            # wmllint: general spellings Wesnoth
             message= _ "I failed my first command! Better to die here than return to Wesnoth like a loser!"
         [/message]
         [endlevel]
