--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -244,6 +244,7 @@
         {VARIABLE divaid_alive true}
         {VARIABLE croquet_alive false}
         {VARIABLE trapper_name "Divaid"}
+        # wmllint: directory spellings Ranfy
         {VARIABLE pet_name "Ranfy"}
 
         {02A_INTRODUCTION_03}
@@ -331,7 +332,7 @@
                         [then]
                             [message]
                                 speaker=Ranfy
-                                message=_ "Kreeee!"
+                                message=_ "Kreeee!" # wmllint: no spellcheck
                             [/message]
                             [message]
                                 speaker=Divaid
@@ -414,17 +415,17 @@
             [then]
                 [message]
                     speaker=Ranfy
-                    message=_ "Kraii?"
+                    message=_ "Kraii?" # wmllint: no spellcheck
                 [/message]
                 [message]
                     speaker=Divaid
-                    message= _ "Ranfy founded a liitle of gold in that uninhabited house! Probably it was hidden by some bandit."
+                    message= _ "Ranfy found a little bit of gold in that uninhabited house! Probably it was hidden by some bandit."
                 [/message]
             [/then]
             [else]
                 [message]
                     speaker=unit
-                    message= _ "There's some gold hidden here! Not much but better than nothing."
+                    message= _ "There's some gold hidden here! Not much, but better than nothing."
                 [/message]
             [/else]
         [/if]
