--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -200,6 +200,7 @@
         {VARIABLE croquet_alive true}
         {VARIABLE divaid_alive false}
         {VARIABLE trapper_name "Croquet"}
+        # wmllint: directory spellings Fangy
         {VARIABLE pet_name "Fangy"}
 
         {02B_CROQUET_INTRODUCTION}
@@ -277,14 +278,14 @@
         [/sound]
         [message]
             speaker=Grunto
-            message= _ "Aaaaah"
+            message= _ "Aaaaah!" # wmllint: no spellcheck
         [/message]
         [delay]
             time=1000
         [/delay]
         [message]
             speaker=Glauco
-            message= _ "Die, orc, for all the Amoran's people!"
+            message= _ "Die, orc, for all of Amoran's people!"
         [/message]
         {STORE_HEROES}
         [endlevel]
