--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -49,6 +49,7 @@
     [side]
         side=2
         type=Naga Myrmidon
+        # wmllint: directory spellings Kssihiss
         id=Kssihiss
         name="Kssihiss"
         controller=ai
@@ -71,6 +72,7 @@
     [side]
         side=3
         type=EXI_Ogregreat
+        # wmllint: directory spellings Glubtrub
         id=Glubtrub
         name="Glubtrub"
         controller=ai
@@ -106,7 +108,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Defeat Ksshiss"
+                description= _ "Defeat Kssihiss"
                 condition=win
             [/objective]
             [objective]
@@ -191,7 +193,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Defeat KssHiss"
+                description= _ "Defeat Kssihiss"
                 condition=win
             [/objective]
             [objective]
@@ -264,7 +266,7 @@
         [/filter]
         [message]
             speaker=Kssihiss
-            message= _ "Damned humansss... Hiss!"
+            message= _ "Damned humansss... Hiss!" # wmllint: no spellcheck
         [/message]
 
         [kill]
