--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -196,7 +196,7 @@
         name=turn 2
         [message]
             speaker=Giksy
-            message= _ "Let's ssshow them the little sssurprissse that we had prepared for the fisssh if they had decided to recover the issland!"
+            message= _ "Let's ssshow them the little sssurprissse that we had prepared for the fisssh if they had decided to recover the issland!" # wmllint: no spellcheck
         [/message]
         [fire_event]
             name=create_sea_monsters
@@ -208,7 +208,7 @@
         name=turn 8
         [message]
             speaker=Giksy
-            message= _ "Thingsss are not going well! Ssshamansss, sssummon other sssnakesss from the sssea!"
+            message= _ "Thingsss are not going well! Ssshamansss, sssummon other sssnakesss from the sssea!" # wmllint: no spellcheck
         [/message]
         [fire_event]
             name=create_sea_monsters
@@ -223,7 +223,7 @@
         name=turn 16
         [message]
             speaker=Giksy
-            message= _ "We need of ohtersss sssea companionsss, sssummon all them!"
+            message= _ "We need of ohtersss sssea companionsss, sssummon all them!" # wmllint: no spellcheck
         [/message]
         [fire_event]
             name=create_sea_monsters
@@ -241,7 +241,7 @@
         [/filter]
         [message]
             speaker=Giksy
-            message= _ "Aaah... I'll... never... sssee... my... treasssure... again..."
+            message= _ "Aaah... I'll... never... sssee... my... treasssure... again..." # wmllint: no spellcheck
         [/message]
         [kill]
             side=2
