--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -500,7 +500,7 @@
         [/filter]
         [message]
             speaker=Hisskss
-            message= _ "Hissss!"
+            message= _ "Hissss!" # wmllint: no spellcheck
         [/message]
         [kill]
             id=Hisskss
