--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -19,8 +19,9 @@
         x,y=10,5
         type=General
         controller=human
-        team_name=Wesnotians
-        user_team_name=_ "Wesnotians"
+        # wmllint: directory spellings Wesnothians
+        team_name=Wesnothians
+        user_team_name=_ "Wesnothians"
     [/side]
 
     [story]
